Use reactive streams
This allows users to select between Akka, RxJava2 or Reactor
The downside is RxJava1 becomes a bit harder to use